...

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.devspark.robototextview.widget.RobotoEditText
                    android:id="@+id/tsgid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_tsg"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
...

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.devspark.robototextview.widget.RobotoEditText
                    android:id="@+id/accountid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_account"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
...

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.devspark.robototextview.widget.RobotoEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
...

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">

                <com.devspark.robototextview.widget.RobotoButton
                        android:id="@+id/sign_in_button_demo"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/action_sign_in_demo"
                        app:typeface="roboto_condensed_regular"
                        android:background="?android:attr/selectableItemBackground"/>

                <com.devspark.robototextview.widget.RobotoButton
                        android:id="@+id/sign_in_button"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/action_sign_in"
                        app:typeface="roboto_condensed_regular"
...
