...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Large Text"
                android:textSize="16sp"
                app:typeface="roboto_condensed_regular" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/tvUserInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="Large Text"
                android:textSize="14sp"
                app:typeface="roboto_condensed_regular" />
...
